--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,19 @@
 :root {
   font-family: 'Inter', sans-serif;
 }
+
+.container {
+  max-width: 1400px;
+}
+
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 4rem;
+  }
+}
+
+/* Responsive image */
+img {
+  max-width: 100%;
+  height: auto;
+}
